Replace incorrect badge defn

--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
       "---",
       "travisci",
       "npmversion",
-      "npmversion",
+      "npmdownloads",
       "daviddm",
       "daviddmdev"
     ]
